<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<group android:checkableBehavior="single">-->
        <!--<item-->
            <!--android:id="@+id/nav_camera"-->
            <!--android:icon="@drawable/ic_menu_camera"-->
            <!--android:title="Import" />-->
        <!--<item-->
            <!--android:id="@+id/nav_gallery"-->
            <!--android:icon="@drawable/ic_menu_gallery"-->
            <!--android:title="Gallery" />-->
        <!--<item-->
            <!--android:id="@+id/nav_slideshow"-->
            <!--android:icon="@drawable/ic_menu_slideshow"-->
            <!--android:title="Slideshow" />-->
        <!--<item-->
            <!--android:id="@+id/nav_manage"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="Tools" />-->
    <!--</group>-->

    <item android:title="">
        <menu>
            <item
                android:id="@+id/menu_reservation"
                android:icon="@drawable/ic_menu_reservation"
                android:title="@string/menu_reservation_confirm" />
            <item
                android:id="@+id/menu_first_residents_parking_management"
                android:icon="@drawable/ic_menu_first_residents_parking_management"
                android:title="@string/menu_first_residents_parking_management" />
            <item
                android:id="@+id/menu_setting"
                android:icon="@drawable/ic_menu_setting"
                android:title="@string/menu_setting" />
            <item
                android:id="@+id/menu_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/menu_logout" />


        </menu>
    </item>

</menu>
